tests/files/parser_tests/should_fail/033.cmdr
//Should not parse due to missing types
add(a, b) : {
    return a + b;
}
